--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="logo-container">
       <img src="img/logo.jpg" alt="Logo" class="logo">
-      <h1>Muebles Futuristas</h1>
+      <h1>OCTANE HOGAR</h1>
     </div>
     <nav class="menu-secciones">
       <a href="#quienes" onclick="mostrarSeccion('quienes')">Quiénes somos</a>
