--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 </head>
 <body>
   <header>
-    <div class="logo-container">
+    <div class="logo-header">
       <img src="img/logo.jpg" alt="Logo" class="logo">
-      <h1>Muebles Futuristas</h1>
+      <h1>OCTANE HOGAR</h1>
     </div>
+  
+    <div class="redes-sociales">
+      <a href="https://www.instagram.com/tu_usuario" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/tu_usuario" target="_blank"><i class="fab fa-facebook"></i></a>
+    </div>
+  
     <nav class="menu-secciones">
       <a href="#quienes" onclick="mostrarSeccion('quienes')">Quiénes somos</a>
       <a href="#realizamos" onclick="mostrarSeccion('realizamos')">Nuestros trabajos</a>
@@ -20,7 +26,7 @@
       <a href="#comentarios" onclick="mostrarSeccion('comentarios')">Comentarios</a>
     </nav>
   </header>
-
+  
   <section id="quienes" class="seccion">
       <h2>Quiénes somos</h2>
       <h3>Bienvenido a <strong>OCTANE HOGAR</strong> - Herrería y Muebles Industriales</h3>
@@ -75,7 +81,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Muebles Futuristas | Hecho con ❤️</p>
+    <p>© 2025 OCTANE HOGAR | Hecho con ❤️</p>
   </footer>
 
   <a href="https://wa.me/5491123456789" class="whatsapp-float" target="_blank">
