cambios de titulos y descripcion de tarjetas

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
         <div class="card">
           <img src="img/1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Muebles industriales</h5>
+            <p class="card-text">Muebles a medidas para cualquier lado de tu casa</p>
+            <a href="#" class="btn btn-primary">Me interesa este estilo</a>
           </div>
         </div>
       </div>
@@ -109,9 +109,9 @@
         <div class="card">
           <img src="img/2.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Estructuras para exteriores</h5>
+            <p class="card-text">Cualquier idea que tengas la podemos realizar</p>
+            <a href="#" class="btn btn-primary">me gusta este estilo</a>
           </div>
         </div>
       </div>
@@ -119,9 +119,9 @@
         <div class="card">
           <img src="img/3.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Portones</h5>
+            <p class="card-text">Portones a medida y podes elegir el grosor de los materiales</p>
+            <a href="#" class="btn btn-primary">me interesa este estilo</a>
           </div>
         </div>
       </div>
