--- a/index.html
+++ b/index.html
@@ -35,16 +35,10 @@
             <li class="nav-item">
               <a class="nav-link" href="#comentarios" onclick="mostrarSeccion('comentarios')">Formas de contactar</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#realizamos" onclick="mostrarSeccion('realizamos')" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <li class="nav-item ">
+              <a class="nav-link" href="#realizamos" onclick="mostrarSeccion('realizamos')" r>
                 Tipos de trabajo
               </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Living</a></li>
-                <li><a class="dropdown-item" href="#">Comedor</a></li>
-                <li><a class="dropdown-item" href="#">Repisas</a></li>
-                <li><a class="dropdown-item" href="#">Exteriores</a></li>
-              </ul>
             </li>
           </ul>
         </div>
@@ -72,30 +66,10 @@
   <section id="realizamos" class="seccion">
     <h2>Nuestros trabajos</h2>
     <p>Fabricamos muebles únicos y mesas personalizadas adaptadas a tu espacio y estilo. Modernos, rústicos, minimalistas y más.</p>
-    <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="img/1.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="img/2.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="img/3.jpg" class="d-block w-100" alt="...">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-<!-- ---------------------prueba de tarjetas------------ -->
-    <div class="row">
-      <div class="col-sm-6 mb-3 mb-sm-0">
+    
+<!-- ---------------------ptarjetas------------ -->
+<div class="row justify-content-center container-fluid">
+      <div class="col-md-6 col-lg-4 mb-3 mb-sm-0">
         <div class="card">
           <img src="img/1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -105,7 +79,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6">
+      <div class="col-md-6 col-lg-4">
         <div class="card">
           <img src="img/2.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -115,7 +89,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6">
+      <div class="col-md-6 col-lg-4">
         <div class="card">
           <img src="img/3.jpg" class="card-img-top" alt="...">
           <div class="card-body">
