--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
                 somos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#pedido" onclick="mostrarSeccion('pedido')">Materiales</a>
+              <a class="nav-link" href="#pedido" onclick="mostrarSeccion('pedido')">Soluciones en herreria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#comentarios" onclick="mostrarSeccion('comentarios')">Formas de contactar</a>
-            </li>
-            <li class="nav-item ">
               <a class="nav-link" href="#realizamos" onclick="mostrarSeccion('realizamos')" r>
                 Tipos de trabajo
               </a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="#comentarios" onclick="mostrarSeccion('comentarios')">Formas de contactar</a>
             </li>
           </ul>
         
@@ -47,8 +47,7 @@
   </header>
   <!-- ---------------------PRESENTACION------------ -->
   <section id="quienes" class="seccion">
-    <h2>Quiénes somos</h2>
-    <h3>Bienvenido a <strong>OCTANE HOGAR</strong> - Herrería y Muebles Industriales</h3>
+    <h3><strong>OCTANE HOGAR</strong> - Herrería y Muebles Industriales</h3>
 
     <p>En <strong>OCTANE HOGAR</strong>, combinamos <strong>pasión, diseño y precisión</strong> para crear muebles
       industriales y estructuras metálicas de alta calidad.</p>
@@ -64,7 +63,7 @@
 
     <p><em>Convertimos el metal en arte funcional.</em></p>
 
-    <h4>Contactanos y hagamos realidad tu proyecto.</h4>
+    <h4>Contactanos y hace realidad tu proyecto.</h4>
 
   </section>
   <!-- ---------------------GALERIA DE FOTOS------------ -->
