--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <img src="img/1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Muebles industriales</h5>
-            <p class="card-text">Muebles a medidas para cualquier lado de tu casa</p>
+            <p class="card-text">En esta seccion podras ver diversos trabajos industriales de interior </p>
             <a href="#" class="btn btn-primary">Me interesa este estilo</a>
           </div>
         </div>
