--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="card-body">
             <h5 class="card-title">Muebles industriales</h5>
             <p class="card-text">En esta seccion podras ver diversos trabajos industriales de interior </p>
-            <a href="#" class="btn btn-primary">Me interesa este estilo</a>
+            <a href="#muebles" onclick="mostrarSeccion('muebles')" class="btn btn-primary">Ver mas</a>
           </div>
         </div>
       </div>
@@ -129,6 +129,54 @@
     <p>Iniciá sesión con Facebook para dejar tu comentario:</p>
     <div class="fb-comments" data-href="https://tu-pagina.github.io" data-width="100%" data-numposts="5"></div>
     <a href="https://wa.me/5491123456789" class="whatsapp-btn" target="_blank">Chatear por WhatsApp</a>
+  </section>
+    <!-- ---------------------ver mas muebles industriales------------ -->
+  <section id="muebles" class="seccion">
+    <div class="row justify-content-center container-fluid">
+      <div class="col-md-6 col-lg-4 mb-3 mb-sm-0">
+        <div class="card">
+          <img src="img/1.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Habitacion</h5>
+            <p class="card-text">Tipos de trabajos para la habitacion</p>
+            <a href="#muebles" onclick="mostrarSeccion('muebles')" class="btn btn-primary">Ver mas</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-4">
+        <div class="card">
+          <img src="img/2.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Living/Comedor</h5>
+            <p class="card-text">Tipos de trabajos para el living</p>
+            <a href="#" class="btn btn-primary">Ver mas</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-4">
+        <div class="card">
+          <img src="img/3.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Cocina</h5>
+            <p class="card-text">Tipos de trabajos para la cocina</p>
+            <a href="#" class="btn btn-primary">Ver mas</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-4">
+        <div class="card">
+          <img src="img/4.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Lavadero</h5>
+            <p class="card-text">Tipos de trabajos para el lavadero</p>
+            <a href="#" class="btn btn-primary">Ver mas</a>
+          </div>
+        </div>
+      </div>
+    </div>
+</section>
+  </div>
+</nav>
   </section>
 
   <!-- ---------------------FOOTER------------ -->
