--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
   </section>
   <!-- ---------------------ver mas muebles industriales------------ -->
   <section id="muebles" class="seccion">
-    <div class="row justify-content-center container-fluid">
-      <div class="col-md-6 col-lg-4 mb-3 mb-sm-0">
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="col">
         <div class="card">
           <img src="img/1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -143,7 +143,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-4">
+      <div class="col">
         <div class="card">
           <img src="img/2.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -153,7 +153,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-4">
+      <div class="col">
         <div class="card">
           <img src="img/3.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -163,13 +163,13 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-4">
+      <div class="col">
         <div class="card">
           <img src="img/4.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Lavadero</h5>
             <p class="card-text">Tipos de trabajos para el lavadero</p>
-            <a href="#" class="btn btn-primary">Ver mas</a>
+            <a href="#lavadero" onclick="mostrarSeccion('lavadero')" class="btn btn-primary">Ver mas</a>
           </div>
         </div>
       </div>
@@ -183,82 +183,37 @@
         <h5 class="card-title" style="color: black;">CODIGO: H01</h5> <!-- Estilo en línea -->
       </div>
     </div>
-    
+
   </section>
-    <!-- ---------------------ver mas living/comedor------------ -->
-    <section id="living" class="seccion">
-      <div class="card-group">
-        <div class="card">
-          <img src="img/estanteria3.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="img/estanteria4.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="img/estanteria2.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
+  <!-- ---------------------ver mas living/comedor------------ -->
+  <section id="living" class="seccion">
+    <div class="card text-bg-dark">
+      <img src="img/estanteria2.jpeg" class="card-img" alt="...">
+      <div class="card-img-overlay">
+        <h5 class="card-title" style="color: black;">CODIGO: H01</h5> <!-- Estilo en línea -->
       </div>
-      
-    </section>
+    </div>
 
-        <!-- ---------------------ver mas cocina------------ -->
-    <section id="cocina" class="seccion">
-      <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="col">
-          <div class="card">
-            <img src="img/estanteria9.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="img/estanteria8.webp" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="img/estanteria7.webp" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="img/estanteria6.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          </div>
-        </div>
+  </section>
+
+  <!-- ---------------------ver mas cocina------------ -->
+  <section id="cocina" class="seccion">
+    <div class="card text-bg-dark">
+      <img src="img/estanteria3.jpg" class="card-img" alt="...">
+      <div class="card-img-overlay">
+        <h5 class="card-title" style="color: black;">CODIGO: H01</h5> <!-- Estilo en línea -->
       </div>
-    </section>
+    </div>
+  </section>
   <!-- ---------------------ver mas lavadero------------ -->
-
+  <section id="lavadero" class="seccion">
+    <div class="card text-bg-dark">
+      <img src="img/estanteria4.jpg" class="card-img" alt="...">
+      <div class="card-img-overlay">
+        <h5 class="card-title" style="color: black;">CODIGO: H01</h5> <!-- Estilo en línea -->
+      </div>
+    </div>
+  </section>
   <!-- ---------------------FOOTER------------ -->
   <footer>
     <p>© 2025 OCTANE HOGAR | Hecho con ❤️</p>
