prueba de 3 menu

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           <a class="nav-link" aria-current="page" href="#quienes" onclick="mostrarSeccion('quienes')">Quienes
             somos</a>
         </li>
-        <li class="nav-item">
+<!--         <li class="nav-item">
           <a class="nav-link" href="#pedido" onclick="mostrarSeccion('pedido')">Soluciones en herreria</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="#realizamos" onclick="mostrarSeccion('realizamos')" r>
             Tipos de trabajo
@@ -69,6 +69,20 @@
     <p><em>Convertimos el metal en arte funcional.</em></p>
 
     <h4>Contactanos y hace realidad tu proyecto.</h4>
+
+    <h2>¿Buscas transformar tu espacio?</h2>
+    <p>Ofrecemos una amplia variedad de soluciones en herrería y diseño industrial, incluyendo:</p>
+    <ul>
+      <li>Mobiliario a medida: Mesas, estanterías, bancos y otros muebles con estructura metálica y detalles en madera.
+      </li>
+      <li>Estructuras metálicas: Cerramientos, pérgolas, barandas y escaleras con diseños modernos y funcionales.</li>
+      <li>Divisiones y portones: Soluciones en metal para interiores y exteriores, combinando seguridad y estilo.</li>
+      <li>Detalles arquitectónicos: Revestimientos, marcos, pasamanos y otros elementos decorativos en metal y madera.
+      </li>
+    </ul>
+
+    <p>Cada proyecto se adapta a las necesidades del cliente, garantizando calidad, resistencia y diseño personalizado.
+    </p>
 
   </section>
   <!-- ---------------------GALERIA DE FOTOS------------ -->
@@ -112,7 +126,7 @@
     </div>
 
   </section>
-  <!-- ---------------------MATERIALES------------ -->
+<!--   ---------------------MATERIALES------------ 
   <section id="pedido" class="seccion">
     <h2>¿Buscas transformar tu espacio?</h2>
     <p>Ofrecemos una amplia variedad de soluciones en herrería y diseño industrial, incluyendo:</p>
@@ -127,7 +141,7 @@
 
     <p>Cada proyecto se adapta a las necesidades del cliente, garantizando calidad, resistencia y diseño personalizado.
     </p>
-  </section>
+  </section> -->
   <!-- ---------------------FORMAS DE CONTACTAR------------ -->
   <section id="comentarios" class="seccion">
     <h2>Comentarios de clientes</h2>
