cambie footer, y botones de ver mas

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="card-body">
             <h5 class="card-title">Estructuras para exteriores</h5>
             <p class="card-text">Cualquier idea que tengas la podemos realizar</p>
-            <a href="#" class="btn btn-primary">me gusta este estilo</a>
+            <a href="#" class="btn btn-primary">Ver mas</a>
           </div>
         </div>
       </div>
@@ -119,7 +119,7 @@
           <div class="card-body">
             <h5 class="card-title">Portones</h5>
             <p class="card-text">Portones a medida y podes elegir el grosor de los materiales</p>
-            <a href="#" class="btn btn-primary">me interesa este estilo</a>
+            <a href="#" class="btn btn-primary">Ver mas</a>
           </div>
         </div>
       </div>
@@ -235,7 +235,7 @@
   </section>
   <!-- ---------------------FOOTER------------ -->
   <footer>
-    <p>© 2025 OCTANE HOGAR | Hecho con ❤️</p>
+    <p>© 2025 OCTANE HOGAR | VIVIR CON GRANDEZA</p>
   </footer>
 
   <a href="https://wa.me/5491123456789" class="whatsapp-float" target="_blank">
