--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="card-body">
             <h5 class="card-title">Estructuras para exteriores</h5>
             <p class="card-text">Cualquier idea que tengas la podemos realizar</p>
-            <a href="#" class="btn btn-primary">Ver mas</a>
+            <a href="#estructuras" onclick="mostrarSeccion('estructuras')" class="btn btn-primary">Ver mas</a>
           </div>
         </div>
       </div>
@@ -194,6 +194,51 @@
       </div>
     </div>
   </section>
+    <!-- ---------------------ver mas muebles estructurales------------ -->
+    <section id="estructuras" class="seccion">
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="img/1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Habitacion</h5>
+              <p class="card-text">Tipos de trabajos para la habitacion</p>
+              <a href="#habitacion" onclick="mostrarSeccion('habitacion')" class="btn btn-primary">Ver mas</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="img/2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Living/Comedor</h5>
+              <p class="card-text">Tipos de trabajos para el living</p>
+              <a href="#living" onclick="mostrarSeccion('living')" class="btn btn-primary">Ver mas</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="img/3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cocina</h5>
+              <p class="card-text">Tipos de trabajos para la cocina</p>
+              <a href="#cocina" onclick="mostrarSeccion('cocina')" class="btn btn-primary">Ver mas</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="img/4.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Lavadero</h5>
+              <p class="card-text">Tipos de trabajos para el lavadero</p>
+              <a href="#lavadero" onclick="mostrarSeccion('lavadero')" class="btn btn-primary">Ver mas</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   <!-- ---------------------ver mas HABITACION------------ -->
   <section id="habitacion" class="seccion">
     <div class="card text-bg-dark">
